<?xml version="1.0" encoding="utf-8"?>
<resources>
<!-- by boba 16.08.2020
sensitive levels -->
    <string name="sensitive_levels_title">Sensitivity levels</string>
    <string name="sensitive_levels_dialog_title">lock vidio: low,norml,high, wakeup: low,norml,high</string>

    <string name="app_name">Car Settings</string>
    <string name="setting">Setting</string>
    <string name="storage">Storage</string>
    <string name="other_setting">Other</string>
    <string name="volume">Volume</string>
    <string name="brightness">Brightness</string>
    <string name="report">Voice Report In Simple Mode</string>
    <string name="report_summary">Ignore some voice tips if enabled</string>
    <string name="sensity">Sensity Of Voice Wakeup</string>
    <string name="time">Time</string>
    <string name="wifi">WLAN</string>
    <string name="wifi_disconnected">no connection</string>
    <string name="wifi_connected">connected to</string>
    <string name="wifi_connecting">connecting...</string>
    <string name="softap">SoftAP</string>
    <string name="softap_disabled">disabled</string>
    <string name="softap_enabled">enabled, network name is %1$s, password is %2$s</string>
    <string name="datalimit">Data Usage</string>
    <string name="more">More</string>
    <string name="autoclear">Earlier Locked Video Cleared Auto</string>
    <string name="format">Format SD</string>
    <string name="manual">Files Management</string>
    <string name="nosd">No SD</string>
    <string name="dvrsetting">DVR Setting</string>
    <string name="dvr">DVR</string>
    <string name="other">Other</string>
    <string name="size">Size:</string>
    <string name="locked">Locked Video Size:</string>
    <string name="capture">Capture Video Size:</string>
    <string name="video">Loop Video Size:</string>
    <string name="total">Total Size:</string>
    <string name="available">Available Size:</string>
    <string name="sensity_close">Close</string>
    <string name="sensity_low">Low</string>
    <string name="sensity_medium">Normal</string>
    <string name="sensity_high">High</string>
    <string name="serial">Device ID</string>
    <string name="remotectrl">Remote Control enabled</string>
    <string name="download_apk">Remote Control Software Download</string>
    <string name="app">Apps</string>
    <string name="language">Language</string>
    <string name="factory">Factory data reset</string>
    <string name="catch_log_done">Catch Log Done!</string>
    <string name="autosleep_time_title">Auto Sleep</string>
    <string name="autosleep_time_dialog_title">Auto Sleep</string>
    <string name="autosleep_10">10 minutes after car is stopped</string>
    <string name="autosleep_15">15 minutes after car is stopped</string>
    <string name="autosleep_20">20 minutes after car is stopped</string>
    <string name="autosleep_30">30 minutes after car is stopped</string>
    <string name="autosleep_60">60 minutes after car is stopped</string>
    <string name="autosleep_never">Never auto sleep</string>
    <string name="gsensor">Enable Wake Up by Collision</string>
    <string name="gsensor_summary">Capture and Save picture to SD card</string>
    <string name="gsensor_summary_no_carassist">Capture and Save picture to SD card</string>
    <string name="lock">Allow Video Lock</string>
    <string name="lock_summary">collision video will save to special Lock folder</string>
    <string name="sensitive_title">Collision Detection Sensitivity</string>
    <string name="sensitive_summary" />
    <string name="sensitive_dialog_title">Gsensor Sensitive Setting</string>
    <string name="sensitive_high">High</string>
    <string name="sensitive_normal">Normal</string>
    <string name="sensitive_low">Low</string>
    <string name="xiaoyi">小易你好</string>
    <string name="xiaoming">小明你好</string>
    <string name="xiaoka">小卡你好</string>
    <string name="xiaoyun">你好小云</string>
    <string name="sensity_summary">Speak ‘%1$s’ to start voice service</string>
    <string name="update_system">System updates</string>
    <string name="check_version">Check new version</string>
    <string name="upgrade_system">Upgrade system by local fils</string>
    <string name="check_version_tip">Checking new version, please wait a minnue...</string>
    <string name="qrcode_scan">CarAssist</string>
    <string name="dvr_qrcode_scan">CarAssist</string>
    <string name="no_connection">Recorder Do Not Have a Network Connection!</string>
    <string name="bund_tip">Bond QR Code</string>
    <string name="bund_sub_tip">to bund this device by Car Assistant</string>
    <string name="dvr_bund_sub_tip">to bund this device by DVR Assistant</string>
    <string name="qrcode_tip">"CarAssist download and 
Device bund"</string>
    <string name="dvr_qrcode_tip">"CarAssist download and 
Device bund"</string>
    <string name="data_info_title_enable">Mobile Network Status(Enable)</string>
    <string name="data_info_title_disable">Mobile Network Status(Disable)</string>
    <string name="data_info_title_no_sim">Mobile Network Status(No SIM)</string>
    <string name="data_info_summary">used 0KB in this month, totally used 0KB</string>
    <string name="data_info_summary2">totally used</string>
    <string name="data_info_summary3">, totally used</string>
    <string name="unbind_confirm">Are you sure you want to unbind ‘%1$s’?</string>
    <string name="sure">OK</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="connected">(Online)</string>
    <string name="disconnected">(Offline)</string>
    <string name="device_connected">Device Online</string>
    <string name="device_disconnected">Device Offline</string>
    <string name="no_message">No Message</string>
    <string name="bund_dialog_tip">Please install CarAssist and then scan the code for device binding</string>
    <string name="dvr_bund_dialog_tip">Please install DVR Assist and then scan the code for device binding</string>
    <string name="never_show">No notice in one week</string>
    <string name="later">Remind me later</string>
    <string name="user_list">User List:</string>
    <string name="none">None</string>
    <string name="eng_mode">Engineer Mode</string>
    <string name="barcode">IMEI/ICCID/SN</string>
    <string name="imei">IMEI:</string>
    <string name="iccid">ICCID:</string>
    <string name="deviceid">SN:</string>
    <string name="btkb">Auto Scan BT Keyboard</string>
    <string name="bt_prompt">Please press the key of keyboard for connecting if no connection for a while</string>
    <string name="reset_work">If no bluetooth keyboard is near, please disable it</string>
    <string name="btkb_connected">(Connected)</string>
    <string name="btkb_disconnected">(Disconnected)</string>
    <string name="start_telnetd_done">Start telnetd</string>
    <string name="restart_voice_engine">Restart Voice Engine ...</string>
    <string name="softap_setting">SoftAP Setting</string>
    <string name="ssid">Name</string>
    <string name="password">Password</string>
    <string name="password_error">password error</string>
    <string name="error">Error</string>
    <string name="ssid_empty">Name can not be empty</string>
    <string name="password_invalid">Password length should not be less than 8 characters</string>
    <string name="live_enable">Online previewing enabled(Only works in mobile network)</string>
    <string name="live_tip">Video and audio of camera can be playbacked through the phone</string>
    <string name="upgrade_online">Online Upgrade</string>
    <string name="new_version">New version is available</string>
    <string name="latest_version">Latest version</string>
    <string name="download_finish">New version has been downloaded</string>
    <string name="downloading">Downloading：%d %%</string>
    <string name="socol">参与导航路况服务改善计划</string>
    <string name="baidu">参与城市交通改善计划</string>
    <string name="dvrslow">Timelapse Record</string>
    <string name="dvrslow_8">Lasting 8 hours before suspend</string>
    <string name="dvrslow_24">Lasting 24 hours before suspend</string>
    <string name="dvrslow_never">No Timelapse Record function</string>
    <string name="lowvoltage">Low voltage protection</string>
    <string name="offvoltage">If voltage is lower than %s, the device would power off after turning off your car</string>
    <string name="screensave_time_title">Auto Screen Saving</string>
    <string name="screenoff_time_title">Auto Screen Off</string>
    <string name="screensave_time_dialog_title">Screen Saving</string>
    <string name="screensave_1s">1 Second</string>
    <string name="screensave_3s">3 Second</string>
    <string name="screensave_5s">5 Second</string>
    <string name="screensave_10s">10 Second</string>
    <string name="screensave_30s">30 Second</string>
    <string name="screensave_1m">1 Minute</string>
    <string name="screensave_2m">2 Minute</string>
    <string name="screensave_3m">3 Minute</string>
    <string name="screensave_5m">5 Minute</string>
    <string name="screensave_10m">10 Minute</string>
    <string name="screensave_30m">30 Minute</string>
    <string name="screensave_1h">1 Hour</string>
    <string name="screensave_never">Forbid</string>
    <string name="fw_update">Local Update</string>
    <string name="fw_upda_warning">Warning</string>
    <string name="fw_update_summary">System update from local storage</string>
    <string name="fw_file_error">System ROM Package Format Wrong</string>
    <string name="fw_update_message">Your device will be bricked if you choose and install an unofficial or incompatible zip file!</string>
    <string name="version">¡No pasarán! by h45242@4PDA (h45242@boba.su)</string>
    <string name="additional">Additional</string>
</resources>
