<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:icon="@null" android:entries="@array/autosleep_time_entries" android:title="@string/autosleep_time_title" android:key="autosleep_time" android:defaultValue="30" android:dialogTitle="@string/autosleep_time_dialog_title" android:entryValues="@array/autosleep_time_values" />
    <ListPreference android:icon="@null" android:entries="@array/screensave_time_entries" android:title="@string/screensave_time_title" android:key="screensave_time" android:defaultValue="60" android:dialogTitle="@string/screensave_time_dialog_title" android:entryValues="@array/screensave_time_values" />
    <ListPreference android:icon="@null" android:entries="@array/screensave_time_entries" android:title="@string/screenoff_time_title" android:key="screenoff_time" android:defaultValue="60000" android:dialogTitle="@string/screenoff_time_title" android:entryValues="@array/screenoff_time_values" />
    <ListPreference android:icon="@null" android:entries="@array/dvrslow_time_entries" android:title="@string/dvrslow" android:key="dvrslow_time" android:defaultValue="0" android:dialogTitle="@string/dvrslow" android:entryValues="@array/dvrslow_time_values" />
    <CheckBoxPreference android:icon="@null" android:title="@string/gsensor" android:key="gsensor_enable" android:summary="@string/gsensor_summary" android:defaultValue="false" />
    <CheckBoxPreference android:icon="@null" android:title="@string/lock" android:key="video_lock_enable" android:summary="@string/lock_summary" android:defaultValue="true" />
    <com.car.carsetting.GsensorSensitivePreference android:persistent="true" android:title="@string/sensitive_title" android:key="sensitive" android:summary="@string/sensitive_summary" />

<!-- by boba 16.08.2020
sensitive levels -->
    <EditTextPreference android:icon="@null" android:title="@string/sensitive_levels_title" android:dialogTitle="@string/sensitive_levels_dialog_title" android:key="sensitive_levels" />

    <com.car.carsetting.SwitchPreference android:icon="@null" android:persistent="true" android:title="@string/socol" android:key="socol_enable" />
    <com.car.carsetting.SwitchPreference android:icon="@null" android:persistent="true" android:title="@string/baidu" android:key="baidu_enable" />
    <Preference android:icon="@null" android:persistent="true" android:title="@string/app" android:key="app" />
    <Preference android:icon="@null" android:persistent="true" android:title="@string/language" android:key="language" />
    <Preference android:icon="@null" android:persistent="true" android:title="@string/factory" android:key="factory" />
    <Preference android:icon="@null" android:persistent="true" android:visibility="gone" android:title="@string/time" android:key="time" />
    <Preference android:icon="@null" android:persistent="true" android:title="@string/more" android:key="more" />
    <PreferenceScreen android:icon="@null" android:persistent="true" android:title="@string/update_system" android:key="update_screen">
        <PreferenceScreen android:title="Wireless update" android:key="adupsfota_software_update">
            <intent android:targetPackage="com.adups.fota" android:targetClass="com.adups.fota.GoogleOtaClient" />
        </PreferenceScreen>
        <com.car.carsetting.IconPreference android:icon="@null" android:title="@string/upgrade_online" android:key="online_update" />
        <Preference android:icon="@null" android:title="@string/upgrade_system" android:key="upgrade_system">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.deviceinfo.FWUpdateActivity" />
        </Preference>
    </PreferenceScreen>
    <Preference android:icon="@null" android:persistent="true" android:title="@string/serial" android:key="serial" />
    <Preference android:icon="@null" android:persistent="true" android:title="@string/version" android:key="version" />
</PreferenceScreen>