<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/dialog_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:minWidth="480.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="24.0sp" android:textColor="@android:color/white" android:layout_gravity="center" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/softap_setting" />
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip">
        <TextView android:textSize="20.0sp" android:gravity="right" android:layout_gravity="center_vertical" android:paddingRight="15.0dip" android:layout_width="140.0dip" android:layout_height="wrap_content" android:text="@string/ssid" />
        <EditText android:textSize="20.0sp" android:id="@id/ssid" android:layout_width="250.0dip" android:layout_height="45.0dip" android:singleLine="true" android:maxLength="12" android:inputType="textEmailAddress" android:imeOptions="actionNext|flagNoExtractUi" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="25.0dip">
        <TextView android:textSize="20.0sp" android:gravity="right" android:layout_gravity="center_vertical" android:paddingRight="15.0dip" android:layout_width="140.0dip" android:layout_height="wrap_content" android:text="@string/password" />
        <EditText android:textSize="20.0sp" android:id="@id/password" android:layout_width="250.0dip" android:layout_height="45.0dip" android:singleLine="true" android:maxLength="12" android:inputType="textEmailAddress" android:imeOptions="actionDone|flagNoExtractUi" />
    </LinearLayout>
    <View android:background="#ff606060" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">"
<Button android:textSize="24.0sp" android:textColor="@android:color/white" android:id="@id/cancel" android:background="@drawable/dialog_btn_bg" android:padding="15.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" />
        <View android:background="#ff606060" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <Button android:textSize="24.0sp" android:textColor="@android:color/white" android:id="@id/ok" android:background="@drawable/dialog_btn_bg" android:padding="15.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/ok" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>