<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/parentPanel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/activity_bund_minwidth_size" android:minHeight="@dimen/activity_bund_minheight_size" android:paddingStart="12.0dip" android:paddingEnd="12.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/dialog_tip_text_size" android:id="@id/bund_dialog_tip" android:paddingTop="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/bund_dialog_tip" style="?android:style/TextAppearance.Material.Subhead" />
    <com.car.carsetting.QRCode android:id="@id/qrcode" android:layout_width="fill_parent" android:layout_height="@dimen/QRCode_height" android:minHeight="48.0dip" android:layout_weight="1.0" />
    <CheckBox android:textSize="@dimen/dialog_tip_text_size" android:id="@id/check_box" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:text="@string/never_show" />
    <Button android:textSize="@dimen/button1_text_size" android:textColor="#ff009688" android:layout_gravity="right" android:id="@id/button1" android:paddingTop="2.0dip" android:paddingBottom="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/later" android:paddingEnd="28.0dip" style="?android:attr/buttonBarNegativeButtonStyle" />
</LinearLayout>